<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/balls_image" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/competition_name"
                android:textSize="@dimen/big_text"
                android:textStyle="bold|italic"
                android:textColor="@color/black"
                android:gravity="center"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/tennisracket"
                android:scaleType="fitXY"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="match_parent"
                android:text="@string/player1"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:gravity="center"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/vs"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:gravity="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="match_parent"
                android:text="@string/player2"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:gravity="center"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:src="@drawable/tennisracket"
                android:scaleType="fitXY"/>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/score"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/medium_text"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score1"
                android:layout_width="0dp"
                android:layout_weight="4.5"
                android:layout_height="match_parent"
                android:text="@string/initial_score"
                android:textSize="@dimen/big_text"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:gravity="end|center_vertical"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="-"
                android:gravity="center"/>
            <TextView
                android:id="@+id/score2"
                android:layout_width="0dp"
                android:layout_weight="4.5"
                android:layout_height="match_parent"
                android:text="@string/initial_score"
                android:textSize="@dimen/big_text"
                android:textColor="@color/black"
                android:textStyle="italic"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/light_green"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="match_parent"
                android:text="@string/add_button"
                android:layout_margin="@dimen/button_margin"
                android:onClick="addPointsForPlayer1"/>

            <TextView
                android:id="@+id/points_player1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/initial_score"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/black"
                android:gravity="end|center_vertical"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="-"
                android:gravity="center"/>
            <TextView
                android:id="@+id/points_player2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/initial_score"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:gravity="center_vertical" />
            <Button
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="match_parent"
                android:text="@string/add_button"
                android:layout_margin="@dimen/button_margin"
                android:onClick="addPointsForPlayer2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/light_green"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="match_parent"
                android:text="@string/ace_button"
                android:layout_margin="@dimen/button_margin"
                android:onClick="acePlayer1"/>

            <TextView
                android:id="@+id/aces_player1"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/initial_score"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:gravity="end|center_vertical"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="-"
                android:gravity="center"/>
            <TextView
                android:id="@+id/aces_player2"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text="@string/initial_score"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:gravity="center_vertical"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="3.5"
                android:layout_height="match_parent"
                android:text="@string/ace_button"
                android:layout_margin="@dimen/button_margin"
                android:onClick="acePlayer2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@color/light_green"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:text="@string/fault_button"
                android:layout_margin="@dimen/button_margin"
                android:onClick="doubleFaultPlayer1"/>

            <TextView
                android:id="@+id/faults_player1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end|center_vertical"
                android:text="@string/initial_score"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="-" />

            <TextView
                android:id="@+id/faults_player2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/initial_score"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3.5"
                android:text="@string/fault_button"
                android:layout_margin="@dimen/button_margin"
                android:onClick="doubleFaultPlayer2"/>
        </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:useDefaultMargins="true">
            <TextView
                android:text="@string/player1"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/score_player1"
                android:text="@string/initial_score"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:text="@string/player2"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/score_player2"
                android:text="@string/initial_score"
                android:textSize="@dimen/medium_text"
                android:textColor="@color/black"
                android:textStyle="bold"/>


        </GridLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_button"
        android:layout_alignParentRight="true"
        android:onClick="reset"/>
    </RelativeLayout>
    </LinearLayout>
</ScrollView>

